# docker-workshop

./: .envrc  .gitignore  Readme.md  pyproject.toml
01-flask-app/: Dockerfile  Readme.md  app.py  run.sh
02-share-environments/: Dockerfile  run.sh
03-mount-folder/: run.sh
04-docker-compose/: Dockerfile  docker-compose.yml
05-dash/: Dockerfile  app.py  requirements.txt  run.sh
